# proxy

chatgpt/auto_codereview/: README.md  pyproject.toml
chatgpt/auto_codereview/src/: gerrit.py  main.py
chatgpt/grpc_chat/: README.md  pyproject.toml
chatgpt/grpc_chat/src/: __init__.py  main.py
chatgpt/grpc_chat/src/proto/: chatgpt.proto  chatgpt_pb2.py  chatgpt_pb2_grpc.py
chatgpt/grpc_qa/: .flake8  Dockerfile  README.md  pyproject.toml
chatgpt/grpc_qa/src/: __init__.py  callback.py  ingest.py  main.py
chatgpt/pipeline_generate/: .flake8  README.md  pyproject.toml
chatgpt/pipeline_generate/src/: callback.py  example.yaml  main.py
chatgpt/pipeline_generate/src/proto/: __init__.py  pipeline_pb2.py  pipeline_pb2.pyi  pipeline_pb2_grpc.py
codegeex/: README.md  pyproject.toml
codegeex/script/: run.sh  run_quantized.sh
codegeex/script/configs/: codegeex_13b.sh
codegeex/src/: grpc_client.py  main.py
codegeex/src/inference/: inference.py  (+1 more)
openai/: .flake8  README.md  pyproject.toml
openai/script/: build.sh  lint.sh
openai/src/: .env.example  main.py
openai/src/proto/: __init__.py  openai.proto  openai_pb2.py  openai_pb2.pyi  openai_pb2_grpc.py
openai/src/utils/: __init__.py
replitlm/: README.md  pyproject.toml
replitlm/script/: run.sh
replitlm/src/: grpc_client.py  main.py
replitlm/src/inference/: inference.py  inference_oneflow.py  langtag.py
replitlm/src/proto/: replitlm.proto  replitlm_pb2.py  replitlm_pb2_grpc.py
replitlm/src/replitlm/oneflow/: attention.py  beam_constraints.py  beam_search.py  bert_padding.py  blocks.py  configuration_mpt.py  configuration_utils.py  flash_attn_interface.py  flash_attn_triton.py  generation_utils.py  hf_prefixlm_converter.py  logits_process.py  meta_init_context.py  modeling_mpt.py  modeling_outputs.py  norm.py  param_init_fns.py  stopping_criteria.py
replitlm/src/replitlm/torch/: adapt_tokenizer.py  attention.py  blocks.py  hf_prefixlm_converter.py  meta_init_context.py  modeling_mpt.py  norm.py  param_init_fns.py  replit_lm_tokenizer.py
(+8 files in other folders)
