[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Jack"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pgerrit = "^0.1.5"
langchain = "^0.0.191"
openai = "^0.27.8"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
